welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not found: value nm
  if (num%10 <=2 || nm%5 >=8){
                    ^