welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
  if (num%10 <=2 || nm%5 >=8){
    return true
  }else{
    return false
  }
}